--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Le styles -->
     <link href="{{url_for('static', filename='vendor/bootstrap.min.css')}}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
-    <link href="{{url_for('static', filename='css/styles.css')}}?v=1.9.6" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/styles.css')}}?v=1.9.7" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 
@@ -76,6 +76,6 @@
       <!-- Placed at the end of the document so the pages load faster -->
     <script>{% include 'cookies.js' %}</script>
     <script src="{{url_for('static', filename='js/vkbeautify.js')}}" type="text/javascript"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='js/scripts.js')}}?v=1.1.2"></script>      
+    <script type="text/javascript" src="{{url_for('static', filename='js/scripts.min.js')}}?v=1.1.3"></script>      
   </body>
 </html>
