--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -54,7 +54,7 @@ hr.extra-margins{margin-top:40px;margin-bottom:40px}
 .container-fluid{padding-left:0;padding-right:0}
 .container-padded{padding-top:50px;padding-bottom:50px}
 .container-main{padding-top:100px;padding-bottom:50px}
-.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {max-height: 400px;}
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse{max-height: 400px;}
 .navbar{font-family:sans-serif;font-weight:400}
 .navbar-fixed-top{padding-top:30px;padding-bottom:25px;background-color:rgba(255,255,255,0);border:none;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;font-size:14px;-webkit-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-moz-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-ms-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-o-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;z-index:9999}
 .navbar-fixed-top.opaque{padding-top:10px;padding-bottom:10px;background-color:rgba(255,255,255,1);border-bottom:2px solid #eee}
@@ -356,11 +356,12 @@ body{font-size:16px}
 .splash{min-height:550px;max-height:650px}
 }
 @media (max-width: 991px) {
+.navbar-nav .open .dropdown-menu .dropdown-header, .navbar-nav .open .dropdown-menu>li>a {padding: 5px 15px 5px 25px;}
 .navbar-nav .open .dropdown-menu {position: static;float: none;width: auto;margin-top: 0;background-color: transparent;border: 0;-webkit-box-shadow: none;box-shadow: none;}
 .navbar-header{float:none}
 .navbar-toggle{display:block}
 .navbar-collapse{border-top:1px solid transparent;box-shadow:inset 0 1px 0 rgba(255,255,255,.1)}
-.navbar-collapse.collapse{display:none!important}.navbar-nav{float:none!important;margin:7.5px -15px}
+.navbar-collapse.collapse{display:none!important}.navbar-nav{float:none!important;margin: 0px -15px}
 .navbar-nav>li{float:none}.navbar-nav>li>a{padding-top:10px;padding-bottom:10px}
 .navbar-text{float:none;margin:15px 0}
 .navbar-collapse.collapse.in{display:block!important}
