--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -68,8 +68,7 @@ hr.extra-margins{margin-top:40px;margin-bottom:40px}
 .navbar-default .navbar-nav>li>a:focus,.navbar-default .navbar-nav>.open>a:hover,.navbar-default .navbar-nav>.open>a:focus,.navbar-default .navbar-nav>.open>a{color:#FFF;background-color:rgba(255,255,255,0)}
 .dropdown-menu.opaque>li>a,.navbar.opaque .nav > li > a,.navbar-default.opaque .navbar-nav>li>a:focus,.navbar-default.opaque .navbar-nav>.open>a:hover,.navbar-default.opaque .navbar-nav>.open>a:focus,.navbar-default.opaque .navbar-nav>.open>a{color:#666}
 .dropdown-menu>li>a:focus,.dropdown-menu .nav-link a:hover,.nav .open>ul>li>a:hover,.nav .open>a:hover,.navbar .nav > li > a:hover{color:#D00000;background-color:rgba(255,255,255,0)}
-.dropdown-menu>li>a:focus,.dropdown-menu .nav-link a:hover,.nav .open>ul>li>a:hover,.nav .open>a:hover,.navbar .nav > li > a:hover{color:#D00000;background-color:rgba(255,255,255,0)}
-.nav > .nav-link.open > .dropdown-menu.opaque > li > a:hover,.nav > .nav-link.open a.dropdown-toggle:hover {color:#D00000;}
+.nav > .nav-link.open > .dropdown-menu.opaque > li > a:hover,.nav > .nav-link.open a.dropdown-toggle:hover, li.nav-link:hover>a{color:#D00000;}
 .dropdown-menu{top:63px;background-color:rgba(0,0,0,0.5)}
 .dropdown-menu .nav-link{background-color:rgba(255,255,255,0)}
 .dropdown-menu.opaque{background-color:rgba(255,255,255,1)}
