--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,7 +59,7 @@ hr.extra-margins{margin-top:40px;margin-bottom:40px}
 .navbar-fixed-top{padding-top:30px;padding-bottom:25px;background-color:rgba(255,255,255,0);border:none;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;font-size:14px;-webkit-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-moz-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-ms-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-o-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;z-index:9999}
 .navbar-fixed-top.opaque{padding-top:10px;padding-bottom:10px;background-color:rgba(255,255,255,1);border-bottom:2px solid #eee}
 .navbar-brand{padding:0 15px;margin:0}
-.navbar-nav>li{padding:0 20px}
+.navbar-nav>li{margin:0 20px}
 .navbar .nav > li > a{-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;color:#fff;-webkit-transition:color 200ms 0;-moz-transition:color 200ms 0;-ms-transition:color 200ms 0;-o-transition:color 200ms 0;transition:color 200ms 0}
 .navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{background-color:#fff;color:#D00000}
 .nav-link a:after{position:absolute;left:0;bottom:0;width:100%;height:2px;background-color:#D00000;content:'';opacity:0;-webkit-transition:opacity .2s;-moz-transition:opacity .2s;-ms-transition:opacity .2s;-o-transition:opacity .2s;transition:opacity .2s;-webkit-transition:-webkit-transform .2s;-moz-transition:-moz-transform .2s;-ms-transition:-ms-transform .2s;-o-transition:-o-transform .2s;transition:transform .2s;-webkit-transform:translateY(10px);-moz-transform:translateY(10px);-ms-transform:translateY(10px);-o-transform:translateY(10px);transform:translateY(10px)}
@@ -68,7 +68,7 @@ hr.extra-margins{margin-top:40px;margin-bottom:40px}
 .navbar-default .navbar-nav>li>a:focus,.navbar-default .navbar-nav>.open>a:hover,.navbar-default .navbar-nav>.open>a:focus,.navbar-default .navbar-nav>.open>a{color:#FFF;background-color:rgba(255,255,255,0)}
 .dropdown-menu.opaque>li>a,.navbar.opaque .nav > li > a,.navbar-default.opaque .navbar-nav>li>a:focus,.navbar-default.opaque .navbar-nav>.open>a:hover,.navbar-default.opaque .navbar-nav>.open>a:focus,.navbar-default.opaque .navbar-nav>.open>a{color:#666}
 .dropdown-menu>li>a:focus,.dropdown-menu .nav-link a:hover,.nav .open>ul>li>a:hover,.nav .open>a:hover,.navbar .nav > li > a:hover{color:#D00000;background-color:rgba(255,255,255,0)}
-.nav > .nav-link.open > .dropdown-menu.opaque > li > a:hover,.nav > .nav-link.open a.dropdown-toggle:hover, li.nav-link:hover>a{color:#D00000;}
+.nav > .nav-link.open > .dropdown-menu.opaque > li > a:hover,.nav > .nav-link.open a.dropdown-toggle:hover {color:#D00000;}
 .dropdown-menu{top:63px;background-color:rgba(0,0,0,0.5)}
 .dropdown-menu .nav-link{background-color:rgba(255,255,255,0)}
 .dropdown-menu.opaque{background-color:rgba(255,255,255,1)}
