--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -135,7 +135,6 @@ ul.users li{display:inline-block;margin:25px 0 0px 3px;float:none;}
 ul.users li a{display:block;margin-bottom:5px;margin-right:10px;margin-left:10px}
 #cookies_warning{position:fixed;color:#ddd;min-height:30px;position:fixed;left:0;bottom:0;width:100%;z-index:99999;padding:6px 20px 4px;background-color:rgba(70,70,70,0.9);text-align:left}
 #cookies_warning > p{margin-top:8px}
-
 .bs-docs-sidenav{z-index:99;padding:0;width:220px;background-color:rgba(0,0,0,0.7)}
 .bs-docs-sidenav.affix li:first-child{padding-top:40px}
 .bs-docs-sidenav.affix .nav-stacked li:first-child{padding-top:10px}
@@ -191,7 +190,6 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .btn-circle:hover a{transform:none}
 .btn-circle:hover,.btn-circle:focus,.btn-circle:active,.btn-circle.active,.open .dropdown-toggle.btn-primary{color:#FAFAFA;background-position:0 -15px}
 #btn-group-cookies{position:relative;display:flex;vertical-align:middle;justify-content:center}
-
 .input-group-btn .form-control.search-button{border-top-right-radius:10px;border-bottom-right-radius:10px;padding-bottom:10px}
 .btn-default,.btn-primary,.btn-secondary,.btn-success,.btn-info,.btn-warning,.btn-danger{text-shadow:initial;background-color:#fff;border-radius:3px;text-transform:uppercase;font-size:15px;font-weight:600;transition:background-color .3s,color .5s;-webkit-transition:background-color .3s,color .5s;-moz-transition:background-color .3s,color .5s;-ms-transition:background-color .3s,color .5s;-o-transition:background-color .3s,color .5s}
 .btn:active,.btn.active{background-image:none}
@@ -233,7 +231,7 @@ pre.prettyprint{text-align:left}
 .img-overlay .fa{padding-left:5px}
 .img-overlay:hover{opacity:1;transform:none}
 ul.polaroids a.polaroid:after{content:attr(data-polaroid-title)}
-ul.polaroids a.polaroid{list-style:none;word-wrap:break-word;background:#fff;display:inline;float:left;margin:0 0 27px 30px;width:140px;padding:10px 7px 11px;text-align:center;font-family:'Permanent Marker',cursive;text-decoration:none;color:#333;font-size:14px;-webkit-box-shadow:0 3px 6px rgba(0,0,0,.25);-moz-box-shadow:0 3px 6px rgba(0,0,0,.25);box-shadow:0 3px 6px rgba(0,0,0,.25);-webkit-transition:-webkit-transform .15s linear;-moz-transition:-moz-transform .15s linear;-ms-transition:-ms-transform .15s linear;-o-transition:-o-transform .15s linear;transition:transform .15s linear;-moz-transform:rotate(-2deg);-webkit-transform:rotate(-2deg);-ms-transform:rotate(-2deg);-o-transform:rotate(-2deg);transform:rotate(-2deg)}
+ul.polaroids a.polaroid{list-style:none;text-overflow:ellipsis;overflow:hidden;background:#fff;display:inline;float:left;margin:0 0 27px 30px;width:140px;padding:10px 7px 11px;text-align:center;font-family:'Permanent Marker',cursive;text-decoration:none;color:#333;font-size:14px;-webkit-box-shadow:0 3px 6px rgba(0,0,0,.25);-moz-box-shadow:0 3px 6px rgba(0,0,0,.25);box-shadow:0 3px 6px rgba(0,0,0,.25);-webkit-transition:-webkit-transform .15s linear;-moz-transition:-moz-transform .15s linear;-ms-transition:-ms-transform .15s linear;-o-transition:-o-transform .15s linear;transition:transform .15s linear;-moz-transform:rotate(-2deg);-webkit-transform:rotate(-2deg);-ms-transform:rotate(-2deg);-o-transform:rotate(-2deg);transform:rotate(-2deg)}
 ul.polaroids a.polaroid.polaroid-sm{width:120px}
 ul.polaroids .polaroid-sm img{height:100px}
 ul.polaroids a.polaroid:hover{-webkit-transform:scale(1.25);-moz-transform:scale(1.25);position:relative;z-index:5}
@@ -255,9 +253,9 @@ img.grey-border{border:1px solid #DDD}
 .shadow.shadow-inline{display:inline-block;position:relative}
 .shadow{display:block;position:relative}
 .shadow img{display:block}
-.img-circle.shadow-circle:hover{-moz-box-shadow:0px 1px 10px -2px rgba(186, 0, 0, 1);-webkit-box-shadow:0px 1px 10px -2px rgba(186, 0, 0, 1);box-shadow:0px 1px 10px -2px rgba(186, 0, 0, 1)}
+.img-circle.shadow-circle:hover::before{border:1px solid #ECEDED;-moz-box-shadow:inset -3px 3px 10px 1px rgba(255,255,255,.5);-webkit-box-shadow:inset -3px 3px 10px 1px rgba(255,255,255,.5);box-shadow:inset -3px 3px 10px 1px rgba(255,255,255,.5)}
 .shadow::before{display:block;content:'';position:absolute;width:100%;height:100%;-moz-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);-webkit-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2)}
-.shadow-circle{border-top:1px solid #ECEDED;border-radius:50%;transition:box-shadow .5s;-webkit-transition:box-shadow .5s;-moz-transition:box-shadow .5s;-ms-transition:box-shadow .5s;-o-transition:box-shadow .5s}
+.shadow-circle{border:1px solid #ECEDED;border-radius:50%}
 .shadow-circle::before{border-radius:50%}
 .nav-stacked.inset-shadow{-moz-box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);-webkit-box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);border:1px solid rgba(145,145,145,0.5)}
 .inset-shadow{-moz-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);-webkit-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);border:1px solid rgba(223,223,223,0.5)}
@@ -342,6 +340,7 @@ body > footer .container{padding-left:20px;padding-right:20px}
 body{font-size:16px}
 .sticky-footer-col{height:100px;padding-top:0}
 .img-dialog{width:500px}
+.img-circle.shadow-circle{border:none;}
 .pull-right-sm{float:right}
 .vcenter-sm{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-flex-align:center;-ms-flex-align:center;-webkit-align-items:center}
 .pull-right-sm{float:right}
@@ -365,7 +364,6 @@ body{font-size:16px}
 .navbar-text{float:none;margin:15px 0}
 .navbar-collapse.collapse.in{display:block!important}
 .collapsing{overflow:hidden!important}
-.bs-docs-sidenav{top:0;width:180px;margin-top:0;margin-right:0}
 .big-modal{width:800px;margin-left:-400px;margin-top:-60%}
 .navbar-nav>li{padding:0 10px}
 body{padding-top:0}
