--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -11,38 +11,40 @@
         <div class="container container-main">
             {% include "_flash_messages.html" %}
             <div class="row">
-                <div class="col-md-12 white-rounded inset-shadow">
-                    {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
-                    {{ privacy.render_lock_page() }}
-                    {% else %}
-                    <h1 class="xs-center"><i class="fa fa-trophy"></i>{{_('Community Leaderboard')}}</h1>
-                    <table class="table table-striped table-hover table-condensed">
-                        <thead class="inset-text-mid-grey">
-                            <tr>
-                                <th class="text-center">{{ _('Rank') }}</th>
-                                <th>{{ _('Name') }}</th>
-                                <th class="text-center">{{ _('Answers') }}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        {% for user in top_users %}
-                        {% if user.fullname == current_user.fullname and user.rank > 0 %}
-                            <tr class="success">
-                                <td class="text-center"><strong>{{user.rank}}</strong></td>
-                                <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
-                                <td class="text-center"><strong>{{user.score}}</strong></td>
-                            </tr> 
+                <div class="col-xs-12">
+                    <div class="white-rounded inset-shadow">
+                        {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
+                        {{ privacy.render_lock_page() }}
                         {% else %}
-                            <tr>
-                                <td class="text-center">{{user.rank}}</td>
-                                <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
-                                <td class="text-center">{{user.score}}</td>
-                            </tr> 
-                        {%endif%}
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                    {% endif %}
+                        <h1 class="xs-center"><i class="fa fa-trophy"></i>{{_('Community Leaderboard')}}</h1>
+                        <table class="table table-striped table-hover table-condensed">
+                            <thead class="inset-text-mid-grey">
+                                <tr>
+                                    <th class="text-center">{{ _('Rank') }}</th>
+                                    <th>{{ _('Name') }}</th>
+                                    <th class="text-center">{{ _('Answers') }}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for user in top_users %}
+                            {% if user.fullname == current_user.fullname and user.rank > 0 %}
+                                <tr class="success">
+                                    <td class="text-center"><strong>{{user.rank}}</strong></td>
+                                    <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
+                                    <td class="text-center"><strong>{{user.score}}</strong></td>
+                                </tr> 
+                            {% else %}
+                                <tr>
+                                    <td class="text-center">{{user.rank}}</td>
+                                    <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
+                                    <td class="text-center">{{user.score}}</td>
+                                </tr> 
+                            {%endif%}
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {% endif %}
+                    </div>
                 </div>
             </div>      
         </div>
