--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -23,14 +23,15 @@
     
     {% if apps_created %}    
                         
-    <section id="created-apps" class="white">
+                        
+    <section id="created-apps" class="white pattern-white-wall inset-shadow-top">
         {{render_grid_apps(apps_created, "Created Projects", upload_method)}}
     </section>
                     {% endif %}
                         
                     {% if apps %}    
                         
-    <section id="contributed-apps" class="white">
+    <section id="contributed-apps" class="white pattern-white-wall inset-shadow-top">
         {{render_grid_apps(apps, "Contributions", upload_method)}}
     </section>
                     {% endif %}
