Modified some shadows

--- a/templates/applications/stats.html
+++ b/templates/applications/stats.html
@@ -27,7 +27,7 @@
                     {% else %}
                         <div class="row padding-bottom-sm">
                             <div class="col-xs-12">
-                                <div class="white-rounded">
+                                <div class="white-rounded inset-shadow-white">
                                     <h1><strong>{{app.name}}:</strong> Statistics</h1>
                                 </div>
                             </div>
@@ -43,7 +43,7 @@
                         {% endif %}
                         <div class="row padding-bottom-sm">
                             <div class="col-xs-12">
-                                <div class="white-rounded chart">
+                                <div class="white-rounded inset-shadow-white chart">
                                     <h4 class="text-center padding-bottom-sm">Distribution of Answers per Hour</h4>
                                     <div id="hourly-chart">
                                         <canvas id="hourly" style="max-height:300px;"></canvas>
@@ -54,7 +54,7 @@
                         
                         <div class="row padding-bottom-sm">
                             <div class="col-xs-12">
-                                <div class="white-rounded chart">
+                                <div class="white-rounded inset-shadow-white chart">
                                     <h4 class="text-center padding-bottom-sm">Distribution of Answers per Day</h4>
                                     <div id="daily-chart">
                                         <canvas id="daily" style="max-height:300px;"></canvas>
@@ -65,7 +65,7 @@
                         
                         <div class="row">
                             <div class="col-sm-6 col-xs-12 padding-bottom-sm">
-                                <div class="white-rounded chart same-size">
+                                <div class="white-rounded inset-shadow-white chart same-size">
                                     <h4 class="text-center padding-bottom-sm">Proportion of Authenticated Users</h4>
                                     <div id="user-chart">
                                         <canvas id="users" width="500" height="500"></canvas>
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-6 col-xs-12 padding-bottom-sm">
-                                <div class="white-rounded chart same-size">
+                                <div class="white-rounded inset-shadow-white chart same-size">
                                     <h4 class="text-center padding-bottom-sm">Total Daily Activity</h4>
                                     <div id="dow-chart">
                                         <canvas id="dow" width="500" height="500"></canvas>
@@ -88,7 +88,7 @@
         
                         <div class="row">
                             <div class="col-xs-12 padding-bottom-sm">
-                                <div class="white-rounded chart">
+                                <div class="white-rounded inset-shadow-white chart">
                                     <h4 class="text-center padding-bottom-sm">Top 5 Volunteers</h4>
                                     <div id="top-users-chart">
                                         <canvas id="top-users" width="500" height="500"></canvas>
@@ -101,7 +101,7 @@
                         
                         <div class="row padding-bottom-sm">
                             <div class="col-xs-12">
-                                <div class="white-rounded text-center chart">
+                                <div class="white-rounded inset-shadow-white text-center chart">
                                     <h4 class=" padding-bottom-sm">Locations of Anonymous Users</h4>
                                     <div id="map" style="height:480px;"></div>
                                 </div>
