Fixed menu bar options

--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "administrators", active_app) }}
+    {{ render_local_nav(current_user, "administrators") }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
