--- a/templates/account/password.html
+++ b/templates/account/password.html
@@ -15,9 +15,9 @@
             <fieldset>
                 {{ form.id }}
                 {{ form.hidden_tag() }}
-                {{ render_field(form.current_password, placeholder= _('Current password'), class="form-control" ) }}
-                {{ render_field(form.new_password, placeholder= _('New password'), class="form-control" ) }}
-                {{ render_field(form.confirm, placeholder= _('Confirm new password'), class="form-control" ) }}
+                {{ render_field(form.current_password, placeholder= _('Current password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters", autofocus="autofocus" ) }}
+                {{ render_field(form.new_password, placeholder= _('New password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters" ) }}
+                {{ render_field(form.confirm, placeholder= _('Confirm new password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters" ) }}
                 <div class="pull-right" role="group">
                     <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">{{ _('Cancel') }}</a>
                     <input type="submit" value="{{_('Save changes')}}" class="btn btn-success" />
