--- a/templates/account/password_forgot.html
+++ b/templates/account/password_forgot.html
@@ -11,7 +11,7 @@
         <form method="post" role="form">
             <fieldset>
           {{ form.hidden_tag() }}
-          {{ render_field(form.email_addr, placeholder= _('Enter your email address'), class="form-control" ) }}
+          {{ render_field(form.email_addr, placeholder= _('Enter your email address'), class="form-control", type="email", required="required", autofocus="autofocus" ) }}
           
                 <div class="pull-right" role="group">
                     <a href="{{ url_for('account.signin') }}" class="btn btn-default">{{ _('Cancel') }}</a>
