--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -12,11 +12,11 @@
       {{ form.hidden_tag() }}
       
             <fieldset>
-      {{ render_field(form.fullname, placeholder= _('Full Name'), class="form-control") }}
-      {{ render_field(form.name, placeholder= _('Username'), class="form-control") }}
-      {{ render_field(form.email_addr, placeholder= _('Email'), class="form-control") }}
-      {{ render_field(form.password, placeholder= _('Password'), class="form-control") }}
-      {{ render_field(form.confirm, placeholder= _('Confirm Password'), class="form-control") }}
+      {{ render_field(form.fullname, placeholder= _('Full Name'), class="form-control", required="required", pattern=".{3,}", title="Must be a minimum of 3 characters", autofocus="autofocus") }}
+      {{ render_field(form.name, placeholder= _('Username'), class="form-control", required="required", pattern=".{3,}", title="Must be a minimum of 3 characters") }}
+      {{ render_field(form.email_addr, placeholder= _('Email'), class="form-control", type="email", required="required") }}
+      {{ render_field(form.password, placeholder= _('Password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+      {{ render_field(form.confirm, placeholder= _('Confirm Password'), class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
       
                 <div class="pull-right" role="group">
                     <input type="reset" value="{{ _('Cancel') }}" class="btn btn-default" />
