--- a/templates/applications/importers/csv.html
+++ b/templates/applications/importers/csv.html
@@ -19,7 +19,7 @@
                             <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
                                 <fieldset>
                                     {{ form.hidden_tag() }}
-                                    {{ render_field(form.csv_url, class_="input-block-level form-control", placeholder=_('The URL of the CSV file')) }}
+                                    {{ render_field(form.csv_url, class_="input-block-level form-control", placeholder=_('The URL of the CSV file'), required="required", autofocus="autofocus", type="url") }}
                                     <div class="pull-right" role="group">
                                         <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
                                         <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
