--- a/templates/applications/importers/epicollect.html
+++ b/templates/applications/importers/epicollect.html
@@ -20,8 +20,8 @@
                           <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
                             <fieldset>
                             {{ form.hidden_tag() }}
-                              {{ render_field(form.epicollect_project, class_="input-block-level form-control", placeholder=_('The name of the public EpiCollect Plus project')) }}
-                              {{ render_field(form.epicollect_form, class_="input-block-level form-control", placeholder=_('The name of the project\'s form')) }}
+                              {{ render_field(form.epicollect_project, class_="input-block-level form-control", placeholder=_('The name of the public EpiCollect Plus project'), required="required", autofocus="autofocus") }}
+                              {{ render_field(form.epicollect_form, class_="input-block-level form-control", placeholder=_('The name of the project\'s form'), required="required") }}
                               <div class="pull-right" role="group">
                                 <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
                                 <input type="submit" value="{{_('Import')}}" class="btn btn-danger" />
