--- a/templates/applications/importers/gdocs.html
+++ b/templates/applications/importers/gdocs.html
@@ -26,7 +26,7 @@
                           <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
                             <fieldset>
                             {{ form.hidden_tag() }}
-                              {{ render_field(form.googledocs_url, class_="input-block-level form-control", placeholder="The URL of the Google Docs Spreadsheet") }}
+                              {{ render_field(form.googledocs_url, class_="input-block-level form-control", placeholder="The URL of the Google Docs Spreadsheet", required="required", autofocus="autofocus", type="url") }}
                               <div class="pull-right" role="group">
                                 <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
                                 <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
