--- a/templates/applications/new.html
+++ b/templates/applications/new.html
@@ -17,15 +17,15 @@
                     <form role="form" method="post" action="{{ url_for('app.new')}}" enctype="multipart/form-data"}}>
                     {{ form.hidden_tag() }}
                     <fieldset>
-                        {{ render_field(form.name, placeholder=_('Name'), class="form-control") }}
-                        {{ render_field(form.short_name, placeholder=_('Tagline'), label_text=_('Project slug:'), class="form-control") }}
+                        {{ render_field(form.name, placeholder=_('Name'), class="form-control", required="required", autofocus="autofocus") }}
+                        {{ render_field(form.short_name, placeholder=_('Tagline'), label_text=_('Project slug:'), class="form-control", required="required") }}
                         {{ render_field(form.long_description, rows="13", placeholder=_('Long description:
                         
                         · Describe the purpose of the project and what it aims to achieve.
                         · Explain how the project works and how volunteers can help.
                         · Highlight the reasons why volunteers contributions are essential.
                         
-                        You can use HTML tags to format your description.'), class="form-control") }}
+                        You can use HTML tags to format your description.'), class="form-control", required="required") }}
                         <div class="pull-right" role="group">
                             <a href="{{url_for('account.profile', name=current_user.name)}}" class="btn btn-default">{{_('Cancel')}}</a>
                             <input type="submit" value="Create" class="btn btn-success" />
