--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -12,19 +12,19 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                                {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
-                                <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
-                                    {{ form.hidden_tag() }}
-                                    <fieldset>
-                                        {{ render_field(form.n_answers, class_="input-block-level form-control", placeholder= _('The number of answers required per task')) }}
-                                        <div class="pull-right" role="group">
-                                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
-                                            <input type="submit" value="Set redundancy" class="btn btn-danger" />
-                                        </div>
-                                    </fieldset>
-                                </form>
-                            </div><!-- col-sm-9 -->
-                        </div>
+                        {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
+                        <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
+                            {{ form.hidden_tag() }}
+                            <fieldset>
+                                {{ render_field(form.n_answers, class_="input-block-level form-control", placeholder= _('The number of answers required per task'), type="number", autofocus="autofocus", required="required", pattern=".{1,100}", title="Must be a number between 1 and 100") }}
+                                <div class="pull-right" role="group">
+                                    <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
+                                    <input type="submit" value="Set redundancy" class="btn btn-danger" />
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div><!-- col-sm-9 -->
+                </div>
                 {% else %}
                   <div class="page-header">
                       <h1>{{_('Sorry! This project does not exist.')}}.</h1>
