--- a/templates/applications/task_priority.html
+++ b/templates/applications/task_priority.html
@@ -20,8 +20,8 @@
                 <form id="task_priority" class="form-horizontal" method="post" action="{{ url_for('app.task_priority', short_name=app.short_name) }}">
                     {{ form.hidden_tag() }}
                     <fieldset>
-                        {{ render_field(form.task_ids, class_="form-control", placeholder=_('Comma separated task IDs (e.g. 3, 532, 100)'))}}
-                        {{ render_field(form.priority_0, class_="form-control", placeholder=_('Priority between 0.0 and 1.0'))}}
+                        {{ render_field(form.task_ids, class_="form-control", placeholder=_('Comma separated task IDs (e.g. 3, 532, 100)'), required="required", autofocus="autofocus")}}
+                        {{ render_field(form.priority_0, class_="form-control", placeholder=_('Priority between 0.0 and 1.0'), required="required", type="number", step="any")}}
                         <div class="pull-right" role="group">
                             <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
                             <input type="submit" value="Set Priority" class="btn btn-danger" />
