--- a/templates/account/account_validation.html
+++ b/templates/account/account_validation.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="row">
-    <div class="col-md-12">
-        {% include "_flash_messages.html" %}
-        <div class="col-md-4 col-md-offset-4">
-            <h2>{{ _('Just one more step, please') }}</h2>
-            <p>{{ _("In order to confirm your identity, we've sent an email to the address you just provided. Please, check it out and click on the link you'll find to create your account at") }} {{ config.BRAND }}.</p>
-            <p>{{ _("If you are not receiving the email, please check the junk folder. If it's not there please drop us an email to") }} <a href="mailto:{{contact_email}}">{{ contact_email }}</a>.</p>
-            <p>{{ _("In the meantime, you can check some of the amazing") }} <a href="{{url_for('app.index')}}">{{ _('projects') }}</a> {{ _('and contribute to them as anonymous') }}.</p>
+<div class="container-padded">
+    <div class="container container-padded">
+    <div class="row">
+        <div class="col-md-12">
+            {% include "_flash_messages.html" %}
+            <div class="col-md-4 col-md-offset-4">
+                <h2>{{ _('Great, just one more step!') }}</h2>
+                <p>{{ _("In order to confirm your identity, we've sent an email to the address you just provided. Please, check it out and click on the link to create your account at") }} {{ config.BRAND }}.</p>
+                <p>{{ _("If you have not received the email in the next couple of minutes, please check the junk folder. If it's not there drop us an email at") }} <a href="mailto:issues@libcrowds.com">issues@libcrowds.com</a>.</p>
+                <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse" style="display:none;"> 
+                <i class="glyphicon glyphicon-home"></i>Go Home</a>
+            </div>
         </div>
     </div>
+  </div>
 </div>
 {% endblock %}
