Various minor style and layout changes

--- a/templates/account/email/forgot_password.html
+++ b/templates/account/email/forgot_password.html
@@ -2,8 +2,10 @@
 
 <p>We received a request to reset your password at {{ config.BRAND }}.</p>
 
-<p>If you did not make this request please ignore this email. To reset your password, please visit the URL below:
-</p>
+<p>If you did not make this request please ignore this email.</p>
+
+<p>To reset your password, please visit the URL below:</p>
+
 <p><a href="{{ recovery_url }}">{{ recovery_url }}</a></p>
 
 <p>Regards,
