--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -179,6 +179,17 @@ i.fa-users{color:#CF60C9}
 i.fa-tasks{color:#3A7BD2}
 i.fa-check-square-o{color:#15b592}
 h1 i,h2 i,h3 i{padding-right:10px}
+.btn-twitter{background:#00acee;border-radius:0;color:#fff;}
+.btn-twitter:active,.btn-twitter:hover{background:#0087bd;color:#fff;}
+.btn-facebook{background:#3b5998;border-radius:0;color:#fff;}
+.btn-facebook:active,.btn-facebook:hover{background:#30477a;color:#fff;}
+.btn-googleplus{background:#e93f2e;border-radius:0;color:#fff;}
+.btn-googleplus:active,.btn-googleplus:hover{background:#ba3225;color:#fff;}
+.btn-stumbleupon{background:#f74425;border-radius:0;color:#fff;}
+.btn-stumbleupon:active,.btn-stumbleupon:hover{background:#c7371e;color:#fff;}
+.btn-linkedin{background:#0e76a8;border-radius:0;color:#fff;}
+.btn-linkedin:active,.btn-linkedin:hover{background:#0b6087;color:#fff;}
+.btn-twitter:link,.btn-twitter:visited,.btn-facebook:link,.btn-facebook:visited,.btn-googleplus:link,.btn-googleplus:visited,.btn-stumbleupon:link,.btn-stumbleupon:visited,.btn-linkedin:link,.btn-linkedin:visited{color:#fff;}
 .btn-inverse{padding:0}
 .btn-lg{padding:10px 16px;font-size:18px;line-height:1.33;border-radius:3px}
 .btn-sm{padding:5px 10px;font-size:12px;line-height:1.5;border-radius:3px}
