--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -66,6 +66,24 @@
                             </div>
                             </a>
                         </div>
+                        
+                        <div id="oclc" class="col-sm-6 col-md-4">
+                            <a href="{{url_for('admin.oclc_search')}}" rel="nofollow">
+                            <div class="well">
+                                <i class="fa fa-book fa-4x"></i>
+                                <h3  class="margin-bottom-xs">OCLC Catalogue</h3>
+                            </div>
+                            </a>
+                        </div>
+                        
+                        <div id="bl" class="col-sm-6 col-md-4">
+                            <a href="{{url_for('admin.bl_search')}}" rel="nofollow">
+                            <div class="well">
+                                <i class="fa fa-book fa-4x"></i>
+                                <h3  class="margin-bottom-xs">BL Catalogue</h3>
+                            </div>
+                            </a>
+                        </div>
                 </div>
             </div>
         </div>
