Incorrect link fixed

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -68,7 +68,7 @@
                         </div>
                         
                         <div id="oclc" class="col-sm-6 col-md-4">
-                            <a href="{{url_for('admin.oclc_search')}}" rel="nofollow">
+                            <a href="{{url_for('oclc.search')}}" rel="nofollow">
                             <div class="well">
                                 <i class="fa fa-book fa-4x"></i>
                                 <h3  class="margin-bottom-xs">OCLC Catalogue</h3>
@@ -77,7 +77,7 @@
                         </div>
                         
                         <div id="bl" class="col-sm-6 col-md-4">
-                            <a href="{{url_for('admin.bl_search')}}" rel="nofollow">
+                            <a href="{{url_for('bl.search')}}" rel="nofollow">
                             <div class="well">
                                 <i class="fa fa-book fa-4x"></i>
                                 <h3  class="margin-bottom-xs">BL Catalogue</h3>
