--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,6 +162,30 @@ ul.users li a{display:block;margin-bottom:5px;margin-right:10px;margin-left:10px
 #sticky-footer li{text-align:center;display:inline-block}
 #sticky-footer li > a{color:#777;transition:color 100ms;-webkit-transition:color 100ms;-ms-transition:color 100ms;-moz-transition:color 100ms;-o-transition:color 100ms}
 #sticky-footer li > a:hover{color:#D00000;text-decoration:none}
+#browser-detection{background:#FFFFE5;color:#333;position:fixed;_position:absolute;border-radius:5px;border:1px solid #D6D6C1;-moz-border-radius:5px;width:700px;z-index:1001;padding:10px 15px}
+#browser-detection P{background:transparent;line-height:135%;width:auto;float:none;border:none;text-align:left;margin:0;padding:0}
+#browser-detection P.bd-title{padding-top:0;font-size:25px;line-height:100%}
+#browser-detection P.bd-notice{padding-bottom:5px;padding-top:5px}
+#browser-detection SPAN.bd-highlight{color:#B50E0E}
+#browser-detection A#browser-detection-close{width:15px;height:15px;outline:none;position:absolute;right:10px;top:10px;text-indent:-500em;line-height:100%;background:url(./images/close.gif) no-repeat center center}
+#browser-detection A#browser-detection-close:HOVER{background-color:#F5F5DC}
+#browser-detection UL.bd-browsers-list,#browser-detection UL.bd-browsers-list LI,#browser-detection UL.bd-skip-buttons,#browser-detection UL.bd-skip-buttons LI{float:left;list-style:none;margin:0;padding:0}
+#browser-detection UL.bd-browsers-list{clear:both;margin-top:3px;border-top:1px solid #F5F5DC;border-bottom:1px solid #F5F5DC;width:100%;padding:7px 0}
+#browser-detection UL.bd-browsers-list LI{text-align:left}
+#browser-detection UL.bd-browsers-list LI A{width:60px;height:55px;display:block;color:#666;text-decoration:none;padding:10px 10px 0 65px}
+#browser-detection UL.bd-browsers-list LI.firefox A{background:url(./images/firefox.gif) no-repeat left top}
+#browser-detection UL.bd-browsers-list LI.chrome A{background:url(./images/chrome.gif) no-repeat left top}
+#browser-detection UL.bd-browsers-list LI.safari A{background:url(./images/safari.gif) no-repeat left top}
+#browser-detection UL.bd-browsers-list LI.opera A{background:url(./images/opera.gif) no-repeat left top}
+#browser-detection UL.bd-browsers-list LI.msie A{background:url(./images/msie.gif) no-repeat left top}
+#browser-detection UL.bd-skip-buttons{margin-top:10px}
+#browser-detection UL.bd-skip-buttons LI{display:inline;margin-right:10px}
+#browser-detection UL.bd-skip-buttons LI BUTTON{font-size:13px}
+#browser-detection DIV.bd-poweredby{font-size:9px;position:absolute;bottom:10px;right:10px;font-style:italic}
+#browser-detection DIV.bd-poweredby,#browser-detection DIV.bd-poweredby A{color:#AAA}
+#browser-detection DIV.bd-poweredby A:HOVER{text-decoration:none}
+#black_overlay{position:absolute;top:0;left:0;width:100%;height:100%;background-color:#000;z-index:1000;-moz-opacity:.8;opacity:.8;filter:alpha(opacity=80)}
+#browser-detection UL.bd-browsers-list LI A:HOVER,#browser-detection DIV.bd-poweredby A{text-decoration:underline}
 .remove-colour{color:#404040!important}
 p.muted{color:#777}
 p.score{margin-top:-20px;font-size:1.8em}
