Missing closing tag added

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -16,7 +16,7 @@
           {% else %}
           <div class="row vcenter-sm hcenter">
             <div class="col-md-8 col-xs-12 xs-center">
-              <h1>{{ _('Community') }} <h4>{{total}} {{ _('registered users') }}</h4>
+              <h1>{{ _('Community') }} </h1><h4>{{total}} {{ _('registered users') }}</h4>
               <small>Active volunteers are shown below</small>
             </div>
             <div class="col-md-4 col-xs-12 padding-top-xs text-center">
