Extra closing tag removed

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -20,7 +20,7 @@
               <small>Active volunteers are shown below</small>
             </div>
             <div class="col-md-4 col-xs-12 padding-top-xs text-center">
-              <a class="pull-right-sm btn btn-danger" href="{{url_for('leaderboard.index')}}">{{ _('View Leaderboard') }}</a></h1>
+              <a class="pull-right-sm btn btn-danger" href="{{url_for('leaderboard.index')}}">{{ _('View Leaderboard') }}</a>
             </div>
           </div>
           <hr>
